Fix margin spacing issue for footer

--- a/theme/static/css/site.css
+++ b/theme/static/css/site.css
@@ -22,6 +22,7 @@ a:hover {
 
 main {
     padding: 0 1.5rem;
+    margin-bottom: 200px;
 }
 
 footer {
